--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOirXQRQFwFk91iM1mOq6w",
+      "authorship_tag": "ABX9TyPCrFK7OFKT0xqBvUy2Y/HY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,29 +28,33 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "number1 = float(input(\"Enter first number: \"))\n",
-        "number2 = float(input(\"Enter second number: \"))\n",
-        "print(\"The sum is: \", number1 + number2)\n"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "VfMNzrWQPbf_",
-        "outputId": "a296af50-3cac-49b5-953b-4e7bf2e195b5"
+        "id": "MlsIzv_9Qt1r",
+        "outputId": "a3e156c8-9a35-421e-a50d-6b01886192bf"
       },
-      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter first number: 1\n",
-            "Enter second number: 2\n",
-            "The sum is:  3.0\n"
+            "Enter some comma - separated numbers: 3,4,5\n",
+            "List:  ['3', '4', '5']\n",
+            "List:  ['3', '4', '5']\n",
+            "Tuple:  ('3', '4', '5')\n"
           ]
         }
+      ],
+      "source": [
+        "numbers = input(\"Enter some comma - separated numbers: \")\n",
+        "number_list = numbers.split(\",\")\n",
+        "number_tuple = tuple(number_list)\n",
+        "print(\"List: \", number_list)\n",
+        "print(\"List: \", number_list)\n",
+        "print(\"Tuple: \", number_tuple)\n"
       ]
     }
   ]
